# objreader

./: .gitignore  CMakeLists.txt  README.md  test.cc
src/: CMakeLists.txt  objreader.cc  objreader.h  shape.h
util/: FindGLM.cmake
